--- a/index.html
+++ b/index.html
@@ -1,32 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Powder Skilling Checklist</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-<style>
-body {
-  font-family: 'Rubik', sans-serif; 
-}
+const style = document.createElement('style');
+style.textContent = `
+body { font-family: 'Rubik', sans-serif; background-color: #121212; color: white; }
+#floatingChecklist { position: fixed; top: 20px; right: 20px; width: fit-content; z-index: 9999; background-color: #242424; padding: 10px; border: 1px solid #444; }
+.item { margin-bottom: 5px; }
+.checkbox { margin-right: 10px; }
+`;
+document.head.appendChild(style);
 
-#checklist {
-  width: fit-content; 
-}
-
-.item {
-  margin-bottom: 5px;
-}
-
-.checkbox {
-  margin-right: 10px; 
-}
-</style>
-</head>
-<body>
-<div id="checklist"></div>
-
-<script>
 const checklistData = [
   "Mole > 1-3",
   "Mole > 4-6",
@@ -114,25 +94,21 @@ const checklistData = [
   "Mole > 170-171",
   "Powder Buff > 38-50",
   "Mole > 172-190"
+
 ];
 
-const checklistDiv = document.getElementById('checklist');
+const checklistDiv = document.createElement('div');
+checklistDiv.id = 'floatingChecklist';
 
 function createChecklistItem(itemText) {
   const div = document.createElement('div');
   div.classList.add('item');
-
   const checkbox = document.createElement('input');
   checkbox.type = 'checkbox';
   checkbox.classList.add('checkbox');
-  checkbox.addEventListener('change', () => {
-    div.remove();
-    updateChecklistPositions();
-  });
-
+  checkbox.addEventListener('change', () => { div.remove(); updateChecklistPositions(); });
   const label = document.createElement('label');
   label.textContent = itemText;
-
   div.appendChild(checkbox);
   div.appendChild(label);
   return div;
@@ -140,17 +116,33 @@ function createChecklistItem(itemText) {
 
 function updateChecklistPositions() {
   const items = checklistDiv.querySelectorAll('.item');
-  items.forEach((item, index) => {
-    item.style.top = `${index * 20}px`; // Adjust spacing as needed
-  });
+  items.forEach((item, index) => { item.style.top = `${index * 20}px`; });
 }
 
-checklistData.forEach(item => {
-  checklistDiv.appendChild(createChecklistItem(item));
-});
+function saveChecklistToCookie() {
+  const checkedItems = Array.from(checklistDiv.querySelectorAll('.checkbox:checked')).map(checkbox => checkbox.nextSibling.textContent);
+  document.cookie = `checklist=${JSON.stringify(checkedItems)}; expires=Fri, 31 Dec 9999 23:59:59 GMT; path=/`;
+}
 
-updateChecklistPositions(); // Initial positioning
-</script>
+function loadChecklistFromCookie() {
+  const cookies = document.cookie.split('; ');
+  for (const cookie of cookies) {
+    const [name, value] = cookie.split('=');
+    if (name === 'checklist') {
+      const checkedItems = JSON.parse(value);
+      checklistData.forEach(item => {
+        const div = createChecklistItem(item);
+        checklistDiv.appendChild(div);
+        if (checkedItems.includes(item)) {
+          div.querySelector('.checkbox').checked = true;
+        }
+      });
+      updateChecklistPositions();
+      break;
+    }
+  }
+}
 
-</body>
-</html>
+document.body.appendChild(checklistDiv);
+loadChecklistFromCookie();
+document.addEventListener('change', saveChecklistToCookie);
