--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <title>Checklist</title>
 <style>
+body {
+  font-family: 'Rubik', sans-serif;
+  background-color: #242424; /* Dark background */
+  color: white;            /* Light text color */
+}
+
 #checklist {
   width: fit-content; /* Allow content to determine width */
 }
