--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <style>
 body {
   font-family: 'Rubik', sans-serif;
-  background-color: #242424; /* Dark background */
-  color: white;            /* Light text color */
+  background-color: #242424;
+  color: white;
 }
 
 #checklist {
-  width: fit-content; /* Allow content to determine width */
+  width: fit-content;
 }
 
 .item {
@@ -140,7 +140,7 @@ function createChecklistItem(itemText) {
 function updateChecklistPositions() {
   const items = checklistDiv.querySelectorAll('.item');
   items.forEach((item, index) => {
-    item.style.top = `${index * 20}px`; // Adjust spacing as needed
+    item.style.top = `${index * 20}px`;
   });
 }
 
@@ -148,7 +148,7 @@ checklistData.forEach(item => {
   checklistDiv.appendChild(createChecklistItem(item));
 });
 
-updateChecklistPositions(); // Initial positioning
+updateChecklistPositions();
 </script>
 
 </body>
